--- a/ideaForge/Dashboard.xaml
+++ b/ideaForge/Dashboard.xaml
@@ -231,7 +231,7 @@
                             <!--
                             </Border>-->
                             <Grid>
-                                <Grid x:Name="headerBar"  Visibility="{Binding Path=DataContext.headerBar,FallbackValue=Hidden}">
+                                <Grid x:Name="headerBar"  Visibility="{Binding Path=DataContext.headerBar,Mode=TwoWay,FallbackValue=Hidden}">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="0.5*"/>
                                         <ColumnDefinition Width="Auto"/>
@@ -267,7 +267,7 @@
                        Foreground="Black"
                        FontWeight="Medium"
                               FontFamily="Segoe UI"     
-                       Content="{Binding PageName,Mode=TwoWay}" />
+                       Content="{Binding Path=DataContext.PageName,Mode=TwoWay}" />
                                     <Border
                             Grid.Column="2"
                           
@@ -304,11 +304,11 @@
                             HorizontalAlignment="Right"
                             Orientation="Horizontal"
                             >
-                                        <Button Margin="10,0,0,0" x:Name="btnExcel" BorderThickness="0" BorderBrush="Transparent" Click="btnExcel_Click"  Height="40" Visibility="{Binding Path=DataContext.btnExcel, FallbackValue=Hidden}">
+                                        <!--<Button Margin="10,0,0,0" x:Name="btnExcel" BorderThickness="0" BorderBrush="Transparent" Click="btnExcel_Click"  Height="40" Visibility="{Binding Path=DataContext.btnExcel, FallbackValue=Hidden}">
                                             <Button.Content>
                                                 <Image Source="/Images/iconExcel.png"/>
                                             </Button.Content>
-                                        </Button>
+                                        </Button>-->
 
                                         <Image 
                           Margin="0,10"
